# devnet_training

./: .gitignore  README.md  aci_rest_api.py  aci_toolkit_practice.py  cisco_sandboxes.py  config_activate_netconf_yang_iosxr  iosxe_capabilities  iosxe_operations  iosxe_restconf_api  iosxe_yang_modules  netconf-yang-nxos.py  nx-os-telemetry  nxos-capabilities  requirements.txt  restconf.py  restconf_iosxe.py  restconf_nxos_yang.py  rfc6020_yang_1_0.txt  rfc_yang_1.1.txt  test_py_generated_oc.py  ydk_bgp_iosxe.py
automapping/: .gitignore  .gitlab-ci.yml  README.md  convert_data_for_frontend.py  docker-compose.yml  draw_topology.py  get_ifaces_stats.py  hosts.yaml  interface_rtr.tplate  requirements-dev.txt  requirements.txt  scrap_devices_lldp.py
batfish/: README.md  batfish_4_rfc5549.py  check_inline_cfg.py  try_batfish.py
bgpstuff/: get_ip_infos.py
cisco_devnet/: aci_cobra.py  cisco_sandboxes.py  config_activate_restconf_yang_iosxe  netconf-yang-nxos.py
dind-k8s-cluster/: README.md
eBPF/: README.md
frr/: pbr.md
gemini/: gemini_article.py  gemini_audio.py  gemini_pdf.py  gemini_video.py  requirements.txt  requirements.txt.details
git/: README.md
gitlab-runner-testing/: README.md
gns3-api/: README.md  create_br_iface.sh  create_proj.py  requirements-dev.txt  requirements.txt
maths_4_dev/: algebra.md  algorithms.md  some_definitions.md  some_theorems.md  structs.md
maths_4_dev_and_networking/: README.md  algo-ps1.md  (+4 more)
poetry/test-proj/: README.md  pyproject.toml
poetry/test-proj/test_proj/: test_proj.py
poetry/test-proj/tests/: test_test_proj.py
(+282 files in other folders)
