[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["jpmondet <jp@mondet.org>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
requests = "^2.24.0"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-script = "test_proj.test_proj:main"
